force-app/main/default/objects/VIP_Card_Brand_Purchase__c/VIP_Card_Brand_Purchase__c.object-meta.xml
<CustomObject>
    <description>A brand purchase detail record related to the VIP cards</description>
    <label>VIP Card Brand Purchase</label>
    <nameField>
        <displayFormat>VIP-P{0000000000}</displayFormat>
        <label>VIP Card Brand Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Card Brand Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>