force-app/main/default/objects/VIP_Card_Brand_Purchase__c/fields/Spend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spend_Amount__c</fullName>
    <label>Spend Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>