force-app/main/default/objects/VIP_Card_Brand_Purchase__c/fields/Village_Code__c.field-meta.xml
<CustomField>
    <fullName>Village_Code__c</fullName>
    <label>Village Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>