force-app/main/default/objects/VIP_Card_Brand_Purchase__c/fields/VIP_Card_Exchange__c.field-meta.xml
<CustomField>
    <fullName>VIP_Card_Exchange__c</fullName>
    <label>VIP Card Exchange</label>
    <referenceTo>VIP_Card_Exchange__c</referenceTo>
    <relationshipLabel>VIP Card Brand Purchases</relationshipLabel>
    <relationshipName>VIP_Card_Brand_Purchases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>